--- a/ibcmarketplace/src/main/resources/application.properties
+++ b/ibcmarketplace/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=9090
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ibcmarketplace
 spring.datasource.username=root
-spring.datasource.password=mysqlET10!
+spring.datasource.password=root
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -13,7 +13,11 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 ##(create, update, create-drop, validate)
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
-spring.servlet.multipart.max-file-size=5MB
-spring.servlet.multipart.max-request-size=5MB
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# Logging configuration
+logging.level.org.springframework.web=DEBUG
+logging.level.com.byui.ibcmarketplace=DEBUG
