--- a/ibcmarketplace/src/main/resources/application.properties
+++ b/ibcmarketplace/src/main/resources/application.properties
@@ -2,12 +2,12 @@ spring.application.name=ibcmarketplace
 
 server.port=9090
 
+# MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/ibcmarketplace
 spring.datasource.username=root
-spring.datasource.password=root
-
+spring.datasource.password=mysqlET10!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
